get images from  mongodb and delete

--- a/my-app/.env
+++ b/my-app/.env
@@ -1,4 +1,4 @@
 CLOUD_NAME=dkmecsxuo
 CLOUD_API_KEY=347231912687289
 CLOUD_SECRET=HjuzR5TjM4M_Kdf8MsUQymgOSTA
-MONGO_URI=mongodb+srv://checkingImageUploader:checkingImageUploader@cluster0.zq9ikcx.mongodb.net/Images
+MONGO_URI=mongodb+srv://checkingImageUploader:checkingImageUploader@cluster0.zq9ikcx.mongodb.net/Images/
